# tabula

./: .gitignore  pyproject.toml  requirements.txt  run_tabula.py  setup.py  tabula-welcome.md  tabula.desktop
.pybuild/cpython3_3.12_tabula/: .pydistutils.cfg
TabulaProject/documents/: New Document.md
TabulaProject/notes/comments/New_Document/: New_Document_comment_1.md
debian/: changelog  control  copyright  debhelper-build-stamp  install  rules  tabula-writer.postinst.debhelper  tabula-writer.prerm.debhelper
debian/tabula/DEBIAN/: control  md5sums  postinst
tabula_writer/: main_qt.py
tabula_writer/panels_qt/: base_panel_qt.py  chapter_panel_qt.py  editor_panel_qt.py  notes_panel_qt.py  panel_components.py
tabula_writer/popups_qt/: base_popup_qt.py  bluetooth_popup_qt.py  comment_popup_qt.py  email_popup_qt.py  export_popup_qt.py  full_comment_viewer_popup_qt.py  input_popup_qt.py  search_popup_qt.py  tag_popup_qt.py  wifi_popup_qt.py
tabula_writer/ui/: widgets_qt.py
tabula_writer/utils/: bluetooth_manager.py  config_manager.py  nav_qt.py  pomodoro_timer_qt.py  search_indexer.py  worker_qt.py
